# Multimodal_Invoice_Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-colab.in  requirements-demo.txt  requirements-pdf.txt  requirements-vlm.txt  requirements.txt
.github/workflows/: ci.yml
config/: default.json
docs/: ARCHITECTURE.md  COLAB_RUNBOOK.md  EVALUATION.md  IMPLEMENTATION_LOG.md  OPERATIONS.md  SECURITY.md
notebooks/: 00_colab_bootstrap.ipynb  01_data_and_synthetic_generation.ipynb  02_vlm_extraction_pipeline.ipynb  03_evaluation_and_demo.ipynb
scripts/: prepare_sroie.py
src/invoice_auditor/: __init__.py  __main__.py  artifacts.py  batch_inference.py  cli.py  config.py  datasets.py  decision_policy.py  demo_app.py  evaluation.py  io_utils.py  json_parser.py  models.py  normalizer.py  pipeline.py  preprocessing.py  presentation.py  rules.py  runtime.py  synthetic_generator.py  vlm_extractor.py  vlm_runtime.py
src/invoice_auditor/resources/: models.colab.json
tests/: helpers.py  test_artifacts.py  test_batch_inference.py  test_datasets.py  test_evaluation.py  test_json_and_config.py  test_normalizer.py  test_notebooks.py  test_pdf_preprocessing.py  test_preprocessing.py  test_rules_pipeline.py  test_runtime.py  test_synthetic_evaluation.py  test_vlm_runtime.py
tests/fixtures/: pass_invoice.json  reject_invoice.json  review_invoice.json
